# pyonics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  setup.py
src/pyonics/: __init__.py  main.py  meta.yaml  setup.py
src/pyonics/control/: __init__.py  control.py  controller.py
src/pyonics/control/messages/: __init__.py  osc_messaging.py
src/pyonics/submodules/: __init__.py
src/pyonics/submodules/ui/: interface.py
src/submodules/apps/: apps.py
tests/: argparse_test.py  differint_test.py  osc_basic_test.py
