[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyonics"
version = "0.0.1"
authors = [
  { name="Tayo Castro", email="pyromakesmusic@gmail.com" },
]
description = "Tools for bionics research"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "klampt",
    "cryptography",
    "PyOpenGL",
    "pyaudio",
    "PyQt5",
    "transformers",
    "customtkinter",
    "pyttsx3",
    "vosk",
    "gpsd-py3",
    "python-osc",
    "torch",
    "matplotlib",
    "pytest",
    "differint"
]

[project.urls]
"Homepage" = "https://github.com/pyromakesmusic/pyonics"
"Bug Tracker" = "https://github.com/pyromakesmusic/pyonics/issues"

# THIS IS THE IMPORTANT PART
[tool.hatch.build.targets.wheel]
packages = ["src/pyonics"]