[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyonics"
version = "1.1.1"
authors = [
  { name="Tayo Castro", email="pyromakesmusic@gmail.com" },
]
description = "Tools for bionics research"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "klampt==0.10.0.post2",
    "customtkinter",
    "python-osc",
    "matplotlib",
    "pytest",
    "differint"
]

[project.urls]
"Homepage" = "https://github.com/pyromakesmusic/pyonics"
"Bug Tracker" = "https://github.com/pyromakesmusic/pyonics/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "twine",
    "uv"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyonics"]